# homework_10

./: .user.txt  LICENSE  pyproject.toml
hw_project/hw_project/: asgi.py  settings.py  urls.py  wsgi.py
hw_project/quotes/: admin.py  forms.py  models.py  mongo_models.py  urls.py  utils.py  views.py
hw_project/quotes/migrations/: 0001_initial.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: author.html  base.html  index.html  new_author.html  new_quote.html
hw_project/quotes/templatetags/: extract.py
hw_project/users/: forms.py  urls.py  views.py
hw_project/users/templates/users/: login.html  logout.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
