[project]
name = "homework-10"
version = "0.1.0"
description = ""
authors = [
    {name = "TosLICK",email = "anatosliy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
